--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,12 @@
 site_name: ePoc Mobile Learning
+site_url: https://epoc.inria.fr/
 theme:
   name: material
   custom_dir: custom/
+extra:
+  description: ePoc (Electronic Pocket Open Course) est une application de formation numérique pour mobile. Elle a été développée au sein du Learning Lab Inria.
+  apple_link: https://testflight.apple.com/join/Qm1AvfH6
+  google_link: https://play.google.com/store/apps/details?id=fr.inria.epoc
 
 plugins:
   - awesome-pages
