--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,17 +1,24 @@
 site_name: ePoc Mobile Learning
 site_url: https://epoc.inria.fr/
-repo_url: https://gitlab.inria.fr/learninglab/epoc/epoc-mobile
+repo_url: https://gitlab.inria.fr/learninglab/epoc
 theme:
   name: material
   custom_dir: custom/
-  palette:
-    primary: white
-    accent: red
+  favicon: images/favicon.png
+  features:
+    - navigation.expand
+    - navigation.tabs
+    - navigation.sections
+    - navigation.indexes
 extra:
   description: ePoc (Electronic Pocket Open Course) est une application de formation numérique pour mobile. Elle a été développée au sein du Learning Lab Inria.
   apple_link: https://apps.apple.com/app/epoc/id1596317383
   google_link: https://play.google.com/store/apps/details?id=fr.inria.epoc
+  editor_link_windows: https://gitlab.inria.fr/learninglab/epoc/epoc-editor/-/jobs/artifacts/main/raw/dist_electron/epoc-editor_v0.0.0_2023-03-21.exe?job=build
+  editor_link_macos: https://gitlab.inria.fr/learninglab/epoc/epoc-editor/-/jobs/artifacts/main/raw/dist_electron/epoc-editor_v0.0.0_2023-03-21.zip?job=build
+  editor_link_linux: https://gitlab.inria.fr/learninglab/epoc/epoc-editor/-/jobs/artifacts/main/raw/dist_electron/epoc-editor_v0.0.0_2023-03-21.deb?job=build
 
 plugins:
   - awesome-pages
+  - search
 
