--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: ePoc Mobile Learning
 site_url: https://epoc.inria.fr/
 repo_url: https://gitlab.inria.fr/learninglab/epoc
+dev_addr: '127.0.0.1:1091'
 theme:
   name: material
   custom_dir: custom/
