Add app getting started guide and import instructions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,10 @@ extra:
   editor_link_linux: https://github.com/inrialearninglab/epoc-editor/releases/download/${EDITOR_VERSION}-beta/epoc-editor_${EDITOR_VERSION}-beta_linux_x86_64.AppImage
 exclude_docs: |
   !.well-known
+markdown_extensions:
+  - attr_list
+  - md_in_html
+  - pymdownx.blocks.caption
 plugins:
   - awesome-pages
   - search
