--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shadcn-docs-nuxt-starter",
-  "private": true,
+  "name": "epoc-website",
+  "private": false,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@nuxtjs/i18n": "^9.2.1",
     "nuxt": "^3.15.4",
-    "shadcn-docs-nuxt": "^0.8.14",
+    "shadcn-docs-nuxt": "https://pkg.pr.new/ZTL-UwU/shadcn-docs-nuxt@123",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
