--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qr-code-styling": "^1.9.1",
     "shadcn-docs-nuxt": "git://github.com/ZTL-UwU/shadcn-docs-nuxt.git#bd8d9ac51172e4cd9d56c0dfef293c282a3dc2dc",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-sonner": "^1.3.0"
   }
 }
