Fix deploy on github

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
           node-version: "22"
       # Pick your own package manager and build script
       - run: npm install
-      - run: npm run generate
+      - name: Build for GitHub Pages
+        run: SITE_URL=https://epoc-app.github.io/epoc-website npm run generate
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
