--- a/content/en/guide/1.app/_dir.yml
+++ b/content/en/guide/1.app/_dir.yml
@@ -1,3 +1,3 @@
 title: Guide App mobile
 icon: lucide:smartphone
-navigation.redirect: /guide/app/download
+navigation.redirect: /en/guide/app/download
