--- a/content/en/guide/2.user/_dir.yml
+++ b/content/en/guide/2.user/_dir.yml
@@ -1,3 +1,3 @@
 title: Guide Editeur
 icon: lucide:monitor-cog
-navigation.redirect: /guide/user/install
+navigation.redirect: /en/guide/user/install
