--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@nuxtjs/i18n": "^9.2.1",
     "@nuxtjs/sitemap": "^7.2.9",
+    "embla-carousel-auto-scroll": "^8.6.0",
+    "embla-carousel-vue": "^8.6.0",
     "nuxt": "^3.15.4",
     "qr-code-styling": "^1.9.1",
     "shadcn-docs-nuxt": "git://github.com/ZTL-UwU/shadcn-docs-nuxt.git#bd8d9ac51172e4cd9d56c0dfef293c282a3dc2dc",
