fix: add official collections json

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,3 +3,9 @@
     RewriteBase /
     RewriteRule ^app-redirect(/|$) /appredirect/ [L]
 </IfModule>
+
+<FilesMatch "\.json$">
+    Header set Access-Control-Allow-Origin "*"
+    Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
+    Header set Access-Control-Allow-Headers "Content-Type"
+</FilesMatch>
